fix product images cut off

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -1,9 +1,9 @@
-.template-collection {
+.product-grid {
     .card__media {
         .media {
             img {
                 object-fit: contain;
             }
         }
-    }
+    }    
 }
